# muni-walk-access

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
pipeline/: config.yaml  pyproject.toml
pipeline/docs/: lens-verification.md  per-route-time-windows-plan.md  pipeline-audit-2026-04-16.md  residential-filter-spike.md  timing-spike-2026-04-13.md  timing-spike-2026-04-15.md
pipeline/docs/internal/: pipeline-audit-2026-04-16.md  residential-filter-spike.md  timing-spike-2026-04-14.md
pipeline/src/muni_walk_access/: __init__.py  __main__.py  config.py  exceptions.py  run_context.py
pipeline/src/muni_walk_access/emit/: __init__.py  config_snapshot.py  docs.py  downloads.py  geojson.py  grid_hex_json.py  grid_json.py  schemas.py
pipeline/src/muni_walk_access/frequency/: __init__.py  classify.py
pipeline/src/muni_walk_access/ingest/: __init__.py  boundaries.py  cache.py  contracts.py  datasf.py  gtfs.py  osm.py
pipeline/src/muni_walk_access/network/: __init__.py  build.py
pipeline/src/muni_walk_access/route/: __init__.py  nearest_stop.py
pipeline/src/muni_walk_access/stratify/: __init__.py  grid.py  lens.py
pipeline/tests/: generate_residential_spot_check.py  generate_routing_spot_check.py  test_config.py  test_contracts.py  test_emit.py  test_frequency.py  test_ingest.py  test_main.py  test_network.py  test_route.py  test_run_context.py  test_scaffold.py  test_schemas.py  test_sources.py  test_stratify.py
pipeline/tests/fixtures/: residential_spot_check.yaml  routing_spot_check.yaml  sample_grid.json
site/: astro.config.mjs  package-lock.json  (+3 more)
(+49 files in other folders)
